# struct2tree

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: tests.yml
struct2tree/: __init__.py  __main__.py  cli.py  converter.py  detect.py  models.py  utils.py
struct2tree/parsers/: __init__.py  directory.py  json_tree.py  markdown.py  text.py  tree_text.py  xmind.py  yaml_tree.py
tests/: conftest.py  test_converter.py  test_detect.py  test_directory.py  test_json.py  test_markdown.py  test_text.py  test_tree_text.py  test_xmind.py  test_yaml.py
tests/fixtures/: basic.xmind  legacy.xmind  make_xmind_fixtures.py  multi.xmind  summary.xmind
